main.css
/*==========
GLOBAL STYLES
==========*/
html {
    box-sizing: border-box;
  }
  *, *:before, *:after {
    box-sizing: inherit;
  }


body {
    margin: 0;
    padding: 0;
    font-family: 'Sintony', sans-serif;
}

header {
    background-color: rgb(172, 220, 110);
    margin: 0;
    padding: 50px;
    height: 80vh;
}

h1, h2, h3, h4 {
    font-family: 'Source Sans Pro', sans-serif;
}

h1 {
    font-size: 60px;
    font-weight: 900;
    text-align: center;

}

.h2 {
    font-size: 50px; 
    width: 80%;
    margin: 40px auto;
    padding: 20px;  
}

.h3 {
    font-size: 40px;
}

.h4 {
    text-align: left;
}

div.section {
    width: 80%;
    margin: 20px auto;
}

ul {
    padding: 0;
}


li {
    margin: 20px 0;
}

a {
    text-decoration: none;
    color: black;
}

a:hover {
    text-decoration: underline;
}

.widget {
    padding: 20px;
}

.hidden {
    display: none;
}

/*==========
HEADER
==========*/
.food-search {
    text-align: center;
    max-width: 300px;
    margin: 0 auto; 
}

.food {
    display: flex;
    flex-direction: column;
}

.food-search p {
    font-weight: 700;
    font-size: 20px;
}

input#js-food {
    padding: 8px 12px;
    font-size: 15px;
}

input#submit {
    margin-top: 20px;
    background-color: rgb(50, 58, 84);
    padding: 8px 12px;
    border: none;
    border-radius: 5px;
    font-size: 15px;
    color: white;
}



/*==========
TITLE
==========*/
.food-name {
    background: none;
}




/*==========
WIKI STYLES
==========*/
.wiki-link {
    background-color: rgb(50, 58, 84);  
    border-radius: 5px;
    padding: 8px 12px;
    box-shadow: 1px 1px 3px gray;
    font-size: 15px;
    color: white;
}

.wiki-img {
    width: 100%;
    max-width: 350px;
}

.results-info h2,
.results-info h3, 
.results-info h4{
    text-align: left;
}





/*==========
NUTRITION TABLE STYLES
==========*/
table {
    border-collapse: collapse;
    /* margin: 0 auto; */
}

th {
    text-align: left;
}

th, td {
    border: 1px solid black;
}





/*==========
RECIPE STYLES
==========*/
.recipe {
    background: rgb(233, 233, 233);
    border-radius: 2px;
    padding: 10px;
    list-style: none;
}

label {
    display: block;
    text-align: left;
}

.recipe img {
    width: 100%;
    margin-right: 40px;
}

p.labels {
    overflow-wrap: break-word;
}

.title a {
    font-size: 25px
}

.source {
    font-style: italic;
}

.health-dropdown, .diet-dropdown {
    margin-top: 12px;
    font-size: 16px;
}

.diet-submit {
    border: none;
    background-color: rgb(50, 58, 84);  
    border-radius: 5px;
    padding: 5px 8px;
    font-size: 15px;
    color: white;
    margin-top: 20px;
}




/*==========
MEDIA QUERIES
==========*/
@media (min-width: 768px){
    .recipe img {
        width: 300px;
    }
    .recipe {
        display: flex;
    }
}

@media (min-width: 1100px) {
    .top-row-flex {
        display: flex;
        width: 90%;
        margin: 0 auto;
    }
    .nutrition-facts h3 {
        margin-top: 0;
    }
    .recipe h3 {
        margin-top: 40px;
    }
}

